--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
-    "react-slideshow-image": "^4.3.2"
+    "react-slideshow-image": "^4.3.2",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/node": "^20",
