--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start -p 4224",
+    "lint": "next lint",
+    "pm2:start": "pm2 start \"npm run start\" --name durangobzk",
+    "pm2:rs": "pm2 restart durangobzk --update-env",
+    "pm2:stop": "pm2 delete durangobzk"
   },
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -15,7 +18,6 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cookie": "^1.0.1",
-    "D": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.15",
     "react": "^18",
