--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "pm2:stop": "pm2 delete durangobzk"
   },
   "dependencies": {
+    "@better-auth/cli": "^1.0.19",
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie": "^0.6.0",
     "@types/jsonwebtoken": "^9.0.7",
@@ -24,7 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.5",
     "net": "^1.0.2",
-    "next": "14.2.15",
+    "next": "^15.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-slideshow-image": "^4.3.2",
