--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mysql2": "^3.11.5",
     "net": "^1.0.2",
     "next": "^15.1.0",
+    "nodemailer": "^6.9.16",
     "react": "^18",
     "react-dom": "^18",
     "react-slideshow-image": "^4.3.2",
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
