--- a/package.json
+++ b/package.json
@@ -13,25 +13,15 @@
   },
   "dependencies": {
     "@better-auth/cli": "^1.1.10",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/cookie": "^0.6.0",
-    "@types/jsonwebtoken": "^9.0.7",
-    "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
     "better-auth": "^1.1.10",
-    "cookie": "^1.0.1",
-    "D": "^1.0.0",
     "dotenv": "^16.4.7",
-    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.5",
-    "net": "^1.0.2",
     "next": "^15.1.2",
     "nodemailer": "^6.9.16",
     "react": "^18",
     "react-dom": "^18",
     "react-slideshow-image": "^4.3.2",
-    "sharp": "^0.33.5",
-    "tls": "^0.0.1"
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/node": "^20",
