--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.7",
     "mysql2": "^3.11.5",
     "next": "^15.1.2",
+    "next-intl": "^3.26.4",
     "nodemailer": "^6.9.16",
     "react": "^18",
     "react-dom": "^18",
