--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "pm2:rs": "pm2 restart durangobzk --update-env",
     "pm2:stop": "pm2 delete durangobzk"
   },
+  "prisma": {
+    "schema": "prisma/schema.prisma"
+  },
   "dependencies": {
     "@better-auth/cli": "^1.1.21",
+    "@prisma/client": "^6.7.0",
     "better-auth": "1.2",
     "dotenv": "^16.4.7",
     "mysql2": "^3.11.5",
@@ -26,13 +30,16 @@
     "sharp": "^0.33.5"
   },
   "devDependencies": {
+    "@eslint/config-array": "^0.20.0",
+    "@eslint/object-schema": "^2.1.6",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.15",
     "postcss": "^8",
+    "prisma": "^6.7.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
