--- a/package.json
+++ b/package.json
@@ -15,29 +15,29 @@
     "schema": "prisma/schema.prisma"
   },
   "dependencies": {
-    "@better-auth/cli": "^1.1.21",
+    "@better-auth/cli": "^1.2.7",
     "@prisma/client": "^6.7.0",
     "better-auth": "1.2",
-    "dotenv": "^16.4.7",
-    "mysql2": "^3.11.5",
-    "next": "^15.2.4",
-    "next-intl": "^3.26.5",
+    "dotenv": "^16.5.0",
+    "mysql2": "^3.14.1",
+    "next": "^15.3.2",
+    "next-intl": "^4.1.0",
     "next-sitemap": "^4.2.3",
-    "nodemailer": "^6.9.16",
-    "react": "^18",
-    "react-dom": "^18",
+    "nodemailer": "^7.0.2",
+    "react": "^19",
+    "react-dom": "^19",
     "react-slideshow-image": "^4.3.2",
-    "sharp": "^0.33.5"
+    "sharp": "^0.34.1"
   },
   "devDependencies": {
-    "@eslint/config-array": "^0.20.0",
-    "@eslint/object-schema": "^2.1.6",
-    "@types/node": "^20",
+    "@types/estree": "^1.0.7",
+    "@types/json-schema": "^7.0.15",
+    "@types/node": "^22",
     "@types/nodemailer": "^6.4.17",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "14.2.15",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "15.3.2",
     "postcss": "^8",
     "prisma": "^6.7.0",
     "tailwindcss": "^3.4.1",
