--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "durangonextjs",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 4225",
+    "dev": "next dev -p 4335",
     "build": "next build",
     "start": "next start -p 4224",
     "lint": "next lint",
@@ -32,15 +33,20 @@
   "devDependencies": {
     "@types/estree": "^1.0.7",
     "@types/json-schema": "^7.0.15",
-    "@types/node": "^22",
+    "@types/node": "^22.15.15",
     "@types/nodemailer": "^6.4.17",
-    "@types/react": "^19",
+    "@types/react": "^19.1.3",
     "@types/react-dom": "^19",
-    "eslint": "^9",
+    "@typescript-eslint/eslint-plugin": "^8.32.0",
+    "@typescript-eslint/parser": "^8.32.0",
+    "eslint": "^9.26.0",
     "eslint-config-next": "15.3.2",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "postcss": "^8",
     "prisma": "^6.7.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.8.3"
   }
 }
